--- a/LeatletDemo/css/basic/leaflet.css
+++ b/LeatletDemo/css/basic/leaflet.css
@@ -549,10 +549,10 @@
 
 /* div icon */
 
-.leaflet-div-icon {
+/*.leaflet-div-icon {
 	background: #fff;
 	border: 1px solid #666;
-	}
+	}*/
 
 
 /* Tooltip */
